# InterSubMod

./: .clang-format  .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  README_PROJECT_SUMMARY.md
docs/: README.md  distance_methods_analysis.md  documentation_guide.md  full_vcf_test_report.md
docs/architecture/: strand_aware_processing_design.md
docs/debug/: fix_list.md  methylation_parser_debug.md  mm_ml_tags_analysis.md  perf_list.md  snv_loading_debug.md  tumor_bam_methylation_tags.md
docs/design/: architecture.md  checklist.md  snv_read_methyl_extraction.md
docs/dev/: development_plan.md  final_completion_report.md  implementation_details.md  implementation_plan.md  phase3_completion_report.md  snv_vcf_loading.md
docs/development/: 1202_clustering_evolution_plan.md  1202_complete_implementation_plan.md  1202_plan_evaluation.md  20251202_cluster_heatmap_visualization.md  20251202_hierarchical_clustering_implementation.md  20251203_distance_heatmap_implementation.md  20251222_Bernoulli.md  20251222_Bernoulli_Implementation_Plan.md  clustering_evolution_implementation_guide.md  clustering_evolution_research_overview.md  clustering_evolution_testing_plan.md  heatmap_generation_strategy_analysis.md  roadmap.md
docs/implementation/: read_distance_calculation.md
docs/issues/: 20251221_issues.md
docs/issues/analysis/: mm_ml_detection_issue.md  snv_loading_debug.md
docs/reports/: 20251217_distance_heatmap_logic_investigation.md  20251222_Bernoulli_Implementation_Report.md  2025_12_01_distance_matrix_implementation.md  cluster_heatmap_verification_report.md
docs/reports/design_reviews/: 2024_design_review.md
docs/reports/progress/: phase1_2_report.md
docs/reports/verification/: 2025_11_30_output_integrity_check.md  2025_11_30_strand_and_debug_implementation.md  2025_11_30_strand_verification.md  2025_11_30_verification_analysis.md
include/core/: BamReader.hpp  Clustering.hpp  Config.hpp  DataStructs.hpp  DistanceMatrix.hpp  HierarchicalClustering.hpp  MatrixBuilder.hpp  MethylationMatrix.hpp  MethylationParser.hpp  ReadParser.hpp  RegionOfInterest.hpp  RegionProcessor.hpp  SomaticSnv.hpp  TreeStructure.hpp  Types.hpp
include/io/: RegionWriter.hpp  TreeWriter.hpp
include/utils/: ArgParser.hpp  FastaReader.hpp  Logger.hpp  ResourceMonitor.hpp
scripts/: run_full_vcf_test.sh  run_random_snv_test.sh  verify_output.sh
src/: main.cpp  test_phase1_2.cpp  test_phase3.cpp  test_snv_loading.cpp
src/core/: BamReader.cpp  Config.cpp  DistanceMatrix.cpp  HierarchicalClustering.cpp  MatrixBuilder.cpp  MethylationParser.cpp  ReadParser.cpp  RegionProcessor.cpp  SomaticSnv.cpp  TreeStructure.cpp
src/io/: RegionWriter.cpp  TreeWriter.cpp
src/test/: test_phase1_2.cpp  test_phase3.cpp  test_phase4_5.cpp  test_snvs_32.tsv
src/utils/: FastaReader.cpp  Logger.cpp
tests/: main_test.cpp  test_bam_reader.cpp  test_config.cpp  test_distance_matrix.cpp  test_hierarchical_clustering.cpp  test_snv_loading.cpp
tools/: plot_cluster_heatmap.py  plot_distance_heatmap.py
